WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34999
Compositing layers inside overflow:scroll divs are not always updated on scrolling
https://bugs.webkit.org/show_bug.cgi?id=34999
Summary
Compositing layers inside overflow:scroll divs are not always updated on scro...
Simon Fraser (smfr)
Reported
2010-02-16 14:27:50 PST
Created
attachment 48833
[details]
Testcase In some configurations of compositing layers, those inside an overflow:scroll div are not always updated on scrolling. Testcase attached.
Attachments
Testcase
(1.93 KB, text/html)
2010-02-16 14:27 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(33.07 KB, patch)
2010-02-16 14:32 PST
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-02-16 14:28:20 PST
<
rdar://problem/7632118
>
Simon Fraser (smfr)
Comment 2
2010-02-16 14:32:40 PST
Created
attachment 48835
[details]
Patch
Simon Fraser (smfr)
Comment 3
2010-02-16 16:51:42 PST
http://trac.webkit.org/changeset/54848
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug