2010-02-16  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=34999
        Compositing layers inside overflow:scroll divs are not always updated on scrolling

        When RenderLayer::scrollToOffset() updates compositing layer positions, it needs
        to start updating at its stacking context rather than just its compositing ancestor.
        The stacking context is guaranteed to contain all descendants of the overflow
        layer, including those that are not direct descendants of the overflow layer in stacking
        (and therefore compositing) order.

        Test: compositing/overflow/scroll-ancestor-update.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::scrollToOffset):

Canonical link: https://commits.webkit.org/46155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54848 268f45cc-cd09-0410-ab3c-d52691b4dbfc